test/Fail/RewritingNotSafe.err
RewritingNotSafe.agda:2.1-28: error: [SafeFlagPragma]
The --safe mode does not allow OPTIONS pragma
--rewriting
